--- a/projects/my-lib/src/lib/main/main.component.html
+++ b/projects/my-lib/src/lib/main/main.component.html
@@ -1,16 +1,16 @@
-<section role="main" class="container">
-  <img src="https://placehold.co/1400x400" class="banner-image"/>
-  <div class="grid-row col-3">
+<section role="main" class="container text-center">
+  <img src="https://placeimg.com/1400/400/any" class="banner-image">
+  <div class="grid-row col-3 align-items-end display-flex">
     <div class="grid-unit">
-      <img src="https://placehold.co/650x300"/>
+      <img src="https://placeimg.com/640/480/any">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem cum commodi incidunt ratione fugit ipsam, atque deserunt ullam harum tempore corporis odit fuga eius natus nisi, veniam neque ab accusamus.</p>
     </div>
     <div class="grid-unit">
-      <img src="https://placehold.co/650x300"/>
+      <img src="https://placeimg.com/640/480/any">
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate incidunt sed in nobis. Dignissimos ex laborum nam sequi itaque magni laboriosam provident dolore ullam, sint nesciunt aliquid ratione tempore culpa!</p>
     </div>
     <div class="grid-unit">
-      <img src="https://placehold.co/650x300"/>
+      <img src="https://placeimg.com/640/480/any">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus odio modi soluta consectetur consequuntur, architecto pariatur eligendi dolores ipsum aliquid quis, veritatis voluptatibus officia minima! Assumenda sit molestias dolores doloremque?</p>
     </div>
   </div>
